Sample application code to read from kinesis and persist to RDS using JPA

--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://spring.zzzzz.us-west-2.rds.amazonaws.com:3306/soyer
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+#spring.main.allow-bean-definition-overriding=true
+spring.cloud.function.definition=kinesisRDSFunction
