--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -15,7 +15,7 @@
   <description>Sample project for Spring Boot</description>
 
   <properties>
-    <java.version>11</java.version>
+    <java.version>8</java.version>
     <spring-cloud.version>2021.0.1</spring-cloud.version>
   </properties>
   <dependencies>
@@ -32,11 +32,11 @@
       <artifactId>spring-cloud-function-adapter-aws</artifactId>
     </dependency>
 
-    <dependency>
+    <!--dependency>
       <groupId>org.springframework.experimental</groupId>
       <artifactId>spring-native</artifactId>
       <version>0.11.2</version>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
@@ -58,6 +58,13 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-xray-recorder-sdk-core</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.6</version>
+    </dependency>
+
 
     <dependency>
       <groupId>com.amazonaws</groupId>
