--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://spring.zzzzz.us-west-2.rds.amazonaws.com:3306/soyer
-spring.datasource.username=admin
+#spring.datasource.url=jdbc:mysql://spring.zzzzz.us-west-2.rds.amazonaws.com:3306/soyer
+#spring.datasource.username=admin
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.url=jdbc:postgresql://spring-pg.cluster-zzzzz.us-west-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 #spring.main.allow-bean-definition-overriding=true
